--- a/deployment-dev.yaml
+++ b/deployment-dev.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dev-deployment
+  name: sapkotp2-deployment
 spec:
   replicas: 1  # Number of NGINX pods to run
   selector:
     matchLabels:
-      app: nginx
+      app: sapkotp2
   template:
     metadata:
       labels:
-        app: nginx
+        app: sapkotp2
     spec:
       containers:
-      - name: nginx
-        image: cithit/roseaw:latest   # <-------change this!
+      - name: sapkotp2
+        image: cithit/Parbati:latest   # <-------change this!
         ports:
         - containerPort: 80  # Expose NGINX on port 80      
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx
+  name: sapkotp2
 spec:
   rules: 
   - host: 
@@ -31,18 +31,18 @@ spec:
         pathType: ImplementationSpecific
         backend: 
           service:
-            name: dev-service
+            name: sapkotp2-service
             port:
               number: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: dev-service
+  name: sapkotp2-service
 spec:
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
   selector:
-    app: nginx 
+    app: sapkotp2
